# Distributed-PPML-Worker

./: CMakeLists.txt  TestPrimitives.cpp
BENCHS/: BENCHBuildingBlocks.cpp  BENCHBuildingBlocks.h  BENCHppVFDT.cpp  BENCHppVFDT.h  BenchBuildingBlocks.py  test.csv
CRYPTO/: DTPKC.cpp  DTPKC.h  EvalAdd.cpp  EvalMult.cpp  EvalMult.h  SkeySwitch.cpp  SkeySwitch.h
DATA/CLEAN/: SIS_1000_15.csv  adult_45222_15.csv  autism_609_21.csv  bank_45212_17.csv  spam_4601_57.csv  thy_7200_17.csv  vote_232_15.csv
DATA/Datasets/Edin/: dataClean.csv  result.data  testing.data  training.data
DATA/Scripts/: CSV_Splitter.py  Clean_Adult.py  Clean_Autism.py  Clean_Bank.py  Clean_Iris.py  Clean_Nursery.py  Clean_SIS.py  Clean_Spam.py  Clean_Th.py  Clean_Vote.py  Shuffle.py  Shuffle_enc.py  Split_Train_Test.py  data-clean.txt  subsetRebalance.py
ML/: DatasetReader.cpp  DatasetReader.h  LogisticRegression.cpp  LogisticRegression.h  Record.h
PPML/: CSP.cpp  CSP.h  MLSP.cpp  MLSP.h  PPLogisticRegression.cpp  PPLogisticRegression.h  Worker.cpp  Worker.h
Scripts/: accuracy.py  plot_sigmoid_apprx.py  predictions.txt
UTIL/: math_util.cc  math_util.hh
includes/HEAAN/run/: TestHEAAN
includes/HEAAN/src/: Key.cpp  Scheme.cpp  Scheme.h  SerializationUtils.cpp  SerializationUtils.h
includes/gmp-6.1.2/: Makefile  config.status  libgmpxx.la  libtool
includes/gmp-6.1.2/.libs/: libgmpxx.so.4.5.2  libgmpxx.so.4.5.2T
includes/gmp-6.1.2/cxx/: Makefile
includes/gmp-6.1.2/demos/: Makefile
includes/gmp-6.1.2/demos/calc/: Makefile
includes/gmp-6.1.2/demos/expr/: Makefile
includes/gmp-6.1.2/doc/: Makefile
includes/gmp-6.1.2/mpf/: Makefile
includes/gmp-6.1.2/mpn/: Makefile
includes/gmp-6.1.2/mpq/: Makefile
includes/gmp-6.1.2/mpz/: Makefile
includes/gmp-6.1.2/printf/: Makefile
includes/gmp-6.1.2/rand/: Makefile
includes/gmp-6.1.2/scanf/: Makefile
includes/gmp-6.1.2/tests/: Makefile  libtests.la  t-bswap  t-constants  t-count_zeros  t-hightomask  t-modlinv  t-parity  t-popc  t-sub
includes/gmp-6.1.2/tests/.libs/: t-bswap  t-constants  t-count_zeros  t-hightomask  t-modlinv  t-parity  t-popc  t-sub
includes/gmp-6.1.2/tests/cxx/: Makefile  t-assign  t-binary  t-cast  t-constr  t-cxx11  t-do-exceptions-work-at-all-with-this-compiler  t-headers  t-iostream  t-istream  t-locale  t-misc  t-mix  t-ops  t-ops2  t-ops3  t-ostream  t-prec  t-rand  t-ternary  t-unary
includes/gmp-6.1.2/tests/devel/: Makefile
includes/gmp-6.1.2/tests/misc/: Makefile  t-locale  t-printf  t-scanf
includes/gmp-6.1.2/tests/mpf/: Makefile  reuse  t-add  t-cmp_d  t-conv  t-div  t-dm2exp  t-eq  t-get_d_2exp  t-get_si  t-get_ui  t-gsprec  t-int_p  t-mul_ui  t-muldiv  t-pow_ui  t-set  t-set_q  t-set_ui  t-sqrt  t-sqrt_ui  t-sub  t-trunc  t-ui_div
includes/gmp-6.1.2/tests/mpn/: Makefile  logic  t-aors_1  t-asmtype  (+39 more)
includes/gmp-6.1.2/tune/: Makefile
includes/mpfr-4.0.2/: Makefile  config.status  libtool
includes/mpfr-4.0.2/doc/: Makefile
includes/mpfr-4.0.2/src/: Makefile
includes/mpfr-4.0.2/tests/: Makefile  mpf_compat  mpfr_compat  reuse  tabort_defalloc1  tabort_defalloc2  tabort_prec_max  tabs  tacos  tacosh  tadd  tadd1sp  tadd_d  tadd_ui  tagm  tai  talloc  talloc-cache  tasin  tasinh  tassert  tatan  tatanh  taway  tbeta  tbuildopt  tcan_round  tcbrt  tcheck  tcmp  tcmp2  tcmp_d  tcmp_ld  tcmp_ui  tcmpabs  tcomparisons  tconst_catalan  tconst_euler  tconst_log2  tconst_pi  (+141 more)
includes/mpfr-4.0.2/tune/: Makefile
includes/ntl-11.3.2/src/: MakeDesc  TestGetPID  TestGetTime  gen_gmp_aux  gf2x_version_1_2_or_later_required  makefile
(+258 files in other folders)
